fix on mobile view contact info

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -68,8 +68,11 @@
   .contact-info-container{
     margin: 0;
   }
-  .contact-info-container p, .nav-links li a{
-    font-size: 0.5rem;
+  .contact-info-container p{
+    font-size: 0.75rem;
+  }
+  .nav-links li a{
+    font-size: 1rem;
   }
   .experience-sub-title{
     font-size: 1.25rem;
